<resources>
    <string name="app_name">AgendaSimples</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="biblioteca">biblioteca</string>
    <string name="textview">Texto Titulo </string>
    <string name="camera">camera</string>
    <string name="todo">TODO</string>
    <string name="nome">Nome</string>
    <string name="n_mero">Número</string>
    <string name="endere_o">Endereço</string>
    <string name="email">Email</string>
    <string name="botaoAdd">Adicionar Contato</string>
</resources>