<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/layoutTelaAdicionar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imagemContato"
                            android:layout_width="160dp"
                            android:layout_height="160dp"
                            android:contentDescription="@string/todo"
                            android:visibility="visible"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/botaoAddFoto"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:src="@drawable/manuser" />


                        <Button
                            android:id="@+id/botaoAddFoto"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:onClick="clicaCarregarImagem"
                            android:text="@string/biblioteca"
                            app:backgroundTint="@color/cardview_dark_background"
                            app:layout_constraintBottom_toTopOf="@+id/botaoTirarFoto"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imagemContato"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/botaoTirarFoto"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginLeft="16dp"
                            android:onClick="clicaTirarFoto"
                            android:text="@string/camera"
                            app:backgroundTint="@color/cardview_dark_background"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/botaoAddFoto"
                            app:layout_constraintHorizontal_bias="0.825"
                            app:layout_constraintStart_toEndOf="@+id/imagemContato"
                            app:layout_constraintTop_toBottomOf="@+id/botaoAddFoto" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/textoTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textview"
                        android:textSize="40sp" />

                    <EditText
                        android:id="@+id/campoNome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/nome"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/campoNumero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/n_mero"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/campoEndereco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/endere_o"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/campoEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                    <Button
                        android:id="@+id/botaoAdicionarContato"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/botaoAdd"
                        app:backgroundTint="@color/cardview_dark_background" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutTelaContatos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/listaContatos"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>
</androidx.constraintlayout.widget.ConstraintLayout>